<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="137dp"
            android:layout_marginTop="127dp"
            android:layout_marginEnd="138dp"
            android:layout_marginBottom="555dp"
            android:text="@string/app_name"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="218dp"
            android:layout_height="156dp"
            android:layout_marginStart="138dp"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="145dp"
            android:layout_marginBottom="393dp"
            android:background="@null"
            android:src="@drawable/logo_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/google_places" />

        <EditText
            android:id="@+id/enterUsername"
            android:layout_width="334dp"
            android:layout_height="59dp"
            android:layout_marginStart="47dp"
            android:layout_marginTop="399dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="273dp"
            android:ems="10"
            android:hint="@string/stringUsername"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="334dp"
            android:layout_height="59dp"
            android:layout_marginStart="47dp"
            android:layout_marginTop="458dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="214dp"
            android:ems="10"
            android:hint="@string/stringPassword"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="162dp"
            android:layout_height="51dp"
            android:layout_marginStart="138dp"
            android:layout_marginTop="533dp"
            android:layout_marginEnd="111dp"
            android:layout_marginBottom="147dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/stringLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="162dp"
            android:layout_height="51dp"
            android:layout_marginStart="138dp"
            android:layout_marginTop="650dp"
            android:layout_marginEnd="111dp"
            android:layout_marginBottom="147dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/stringSignUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>